NetBSD Problem Report #41993

From www@NetBSD.org  Sat Sep  5 00:05:23 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 6E97A63BCFB
	for <gnats-bugs@gnats.netbsd.org>; Sat,  5 Sep 2009 00:05:23 +0000 (UTC)
Message-Id: <20090905000523.3C46F63BC1D@www.NetBSD.org>
Date: Sat,  5 Sep 2009 00:05:23 +0000 (UTC)
From: bughunting@xs4all.nl
Reply-To: bughunting@xs4all.nl
To: gnats-bugs@NetBSD.org
Subject: Word missing in skeyinfo(1) error message
X-Send-Pr-Version: www-1.0

>Number:         41993
>Category:       bin
>Synopsis:       Word missing in skeyinfo(1) error message
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Sep 05 00:10:00 +0000 2009
>Closed-Date:    Sat Sep 05 06:16:00 +0000 2009
>Last-Modified:  Sat Sep 05 06:16:00 +0000 2009
>Originator:     Bug Hunting
>Release:        5.99.16
>Organization:
>Environment:
>Description:
A word is missing in a skeyinfo(1) error message.
>How-To-Repeat:
As a non-superuser, execute "skeyinfo <otheruser>".
>Fix:
Apply the following patch:

$ cd /usr/src.current/usr.bin/skeyinfo/; cvs diff -u skeyinfo.c
Index: skeyinfo.c
===================================================================
RCS file: /cvsroot/src/usr.bin/skeyinfo/skeyinfo.c,v
retrieving revision 1.5
diff -u -r1.5 skeyinfo.c
--- skeyinfo.c  28 Apr 2008 20:24:15 -0000      1.5
+++ skeyinfo.c  5 Sep 2009 00:03:04 -0000
@@ -66,7 +66,7 @@
        else if (!uid)
                pw = getpwnam(argv[0]);
        else
-               errx(1, "permission denied to look other users skeys");
+               errx(1, "permission denied to look at other users skeys");

        if (!pw) {
                if (argc)

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41993 CVS commit: src/usr.bin/skeyinfo
Date: Sat, 5 Sep 2009 06:13:34 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Sep  5 06:13:34 UTC 2009

 Modified Files:
 	src/usr.bin/skeyinfo: skeyinfo.c

 Log Message:
 Tidy up error messages. Prompted by PR 41993 from Bug Hunting, but more
 comprehensive.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/usr.bin/skeyinfo/skeyinfo.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 05 Sep 2009 06:16:00 +0000
State-Changed-Why:
Fixed (along with some related issues), thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.