Tidy up error messages. Prompted by PR 41993 from Bug Hunting, but more comprehensive.